llvm/test/tools/llvm-ifs/weak-mismatch.ifs
# RUN: not llvm-ifs --input-format=IFS --output-format=IFS -o - %s %S/Inputs/strong-mismatch-size.ifs 2>&1 | FileCheck %s --check-prefixes=CHECK-SIZE
# RUN: not llvm-ifs --input-format=IFS --output-format=IFS -o - %s %S/Inputs/strong-mismatch-type.ifs 2>&1 | FileCheck %s --check-prefixes=CHECK-TYPE

# CHECK-SIZE: error: Interface Stub: Size Mismatch for foobar.
# CHECK-SIZE-NEXT: Filename:
# CHECK-SIZE-NEXT: Size Values: 1 2


# CHECK-TYPE: error: Interface Stub: Type Mismatch for foobar.
# CHECK-TYPE-NEXT: Filename:
# CHECK-TYPE-NEXT: Type Values: Object Func

--- !ifs-v1
IfsVersion: 3.0
Target: x86_64-unknown-linux-gnu
Symbols:
  - { Name: foobar, Type: Object, Size: 1, Weak: true }
...
